KL mobile mainnav spacing fix attempt v3

--- a/style.css
+++ b/style.css
@@ -5659,8 +5659,7 @@ svg.full-logo {
 		left: 0;
 		padding: 0 20px;
 		width: 100%;
-		text-align: center;
-	}
+		text-align: center; }
 }
 	
 
